k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: insurance-rag
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: 668449743598.dkr.ecr.eu-north-1.amazonaws.com/insurance-rag-app:latest
          ports:
            - containerPort: 8000
            - containerPort: 8501
          resources:
            requests:
              memory: "512Mi"
              cpu: "200m"
            limits:
              memory: "1Gi"
              cpu: "500m"
          volumeMounts:
            - name: chromadb-storage
              mountPath: /tmp/chromadb
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 10
      volumes:
        - name: chromadb-storage
          emptyDir: {}
